<resources>
    <string name="app_name">AppMotivation</string>
    <string name="label_phrases_all">Icone Infinito</string>
    <string name="label_phrases_motivation">Icone Smile</string>
    <string name="label_phrases_morning">Icone Sun</string>
    <string name="label_greeting_user">Olá,Kotlin!</string>
    <string name="label_phrase">Riscos devem ser corridos, porque o maior perigo é não arriscar nada!</string>
    <string name="button_new_phrase">NOVA FRASE</string>
    <string name="label_lets_begin">Vamos começar?</string>
    <string name="hint_your_name">Qual é o seu nome?</string>
    <string name="button_save">SALVAR</string>
    <string name="error_mandatory_name">Informe seu nome!</string>
    <string name="label_user">Usuário</string>
</resources>
















