<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PhrasesActivity">

    <View
        android:id="@+id/view_backgroundTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/BlueDaises"
        android:padding="56dp" />

    <ImageView
        android:id="@+id/imageView_icAll"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@id/view_backgroundTitle"
        android:layout_alignBottom="@id/view_backgroundTitle"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/label_phrases_all"
        android:src="@drawable/ic_infinity" />

    <ImageView
        android:id="@+id/imageView_icSmile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@id/view_backgroundTitle"
        android:layout_alignBottom="@id/view_backgroundTitle"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/label_phrases_motivation"
        android:src="@drawable/ic_smile" />

    <ImageView
        android:id="@+id/imageView_icSunny"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@id/view_backgroundTitle"
        android:layout_alignEnd="@id/view_backgroundTitle"
        android:layout_alignBottom="@id/view_backgroundTitle"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/label_phrases_morning"
        android:src="@drawable/ic_sun" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_backgroundTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/label_greeting_user"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_Frases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="12dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/label_phrase"
        android:textStyle="bold|italic" />


    <View
        android:id="@+id/view_division"
        android:layout_width="128dp"
        android:layout_height="3dp"
        android:layout_below="@id/textView_Frases"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:background="@color/BlueDaises"
        android:elevation="4dp" />

    <Button
        android:id="@+id/button_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/BlueDaises"
        android:text="@string/button_new_phrase"
        android:textSize="12sp" />


</RelativeLayout>